03_ingress/blindtest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blindtest-ingress
  namespace: blindtest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: blindtest.local
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-frontend-service
                port:
                  number: 80
