03_ingress/database-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: database-ingress
  namespace: blindtest
spec:
  ingressClassName: nginx
  rules:
    - host: blindtest.local
      http:
        paths:
          - path: /database
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
